--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libelliptics-proxy (0.1.2) unstable; urgency=low
+
+  * Use C++0x
+  * Fixed errors with writing metadata when not all copies was written
+
+ -- Anton Kortunov <toshik@yandex-team.ru>  Wed, 13 Feb 2013 19:48:35 +0400
+
 libelliptics-proxy (0.1.1) unstable; urgency=low
 
   * Do not update balancer weights if cocaine config is not present
