--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libelliptics-proxy (0.1.3) unstable; urgency=low
+
+  * Depend on libcocaine-dealer1 (=0.9.4.2)
+
+ -- Anton Kortunov <toshik@yandex-team.ru>  Wed, 13 Feb 2013 21:33:51 +0400
+
 libelliptics-proxy (0.1.2) unstable; urgency=low
 
   * Use C++0x
