--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libelliptics-proxy (0.1.5) unstable; urgency=low
+
+  * Hack for write_metadata
+
+ -- Anton Kortunov <toshik@yandex-team.ru>  Thu, 21 Feb 2013 14:32:36 +0400
+
 libelliptics-proxy (0.1.4) unstable; urgency=low
 
   * Upload metadata to correct groups
