--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libelliptics-proxy (0.1.7) unstable; urgency=low
+
+  * Fixed success copies num check
+
+ -- Anton Kortunov <toshik@yandex-team.ru>  Wed, 03 Apr 2013 15:26:08 +0400
+
 libelliptics-proxy (0.1.6) unstable; urgency=low
 
   * Reimplemented write method
