--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libelliptics-proxy (0.1.8) unstable; urgency=low
+
+  * Added methods get_symmetric_groups, get_bad_groups, get_all_groups
+
+ -- Anton Kortunov <toshik@yandex-team.ru>  Tue, 09 Apr 2013 18:44:16 +0400
+
 libelliptics-proxy (0.1.7) unstable; urgency=low
 
   * Fixed success copies num check
