--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libelliptics-proxy (0.1.10) unstable; urgency=low
+
+  * Pass 0 instead of std::string() to cocaine dealer's send_message()
+
+ -- Anton Kortunov <toshik@yandex-team.ru>  Mon, 20 May 2013 17:12:03 +0400
+
 libelliptics-proxy (0.1.9-1) unstable; urgency=low
 
   * Compile with dealer = 0.9.19.1-2
