--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libelliptics-proxy (0.3.3) unstable; urgency=low
+
+  * Updated depends on elliptics
+
+ -- Anton Kortunov <toshik@yandex-team.ru>  Thu, 20 Jun 2013 15:08:17 +0400
+
 libelliptics-proxy (0.3.2) unstable; urgency=low
 
   * Changed callback type in prepare_latest
