--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libelliptics-proxy (0.3.5-cocaine10) lucid; urgency=low
+
+  * Using remotes list instead of only one remote for mastermind
+
+ --   <derikon@derikon.dev.yandex.net>  Mon, 11 Nov 2013 15:15:24 +0400
+
 libelliptics-proxy (0.3.4-cocaine10) lucid; urgency=low
 
   * Using libmastermind instead of cocaine-dealer
