--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libelliptics-proxy (0.3.6-cocaine10ubuntu1) lucid; urgency=low
+
+  * Hotfix: use timeouts for waiting of callbacks
+
+ --   <derikon@derikon.dev.yandex.net>  Tue, 19 Nov 2013 01:25:14 +0400
+
 libelliptics-proxy (0.3.5-cocaine10) lucid; urgency=low
 
   * Using remotes list instead of only one remote for mastermind
